INSPECTIT-2232: Refactor alerting tests were needed