@@ -2,14 +2,16 @@ package rocks.inspectit.server.alerting;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
 
+import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
@@ -26,7 +28,10 @@ import org.testng.annotations.Test;
 
 import rocks.inspectit.server.alerting.state.AlertingState;
 import rocks.inspectit.server.ci.event.AbstractAlertingDefinitionEvent;
-import rocks.inspectit.server.ci.event.AbstractAlertingDefinitionEvent.AlertDefinitionEventType;
+import rocks.inspectit.server.ci.event.AbstractAlertingDefinitionEvent.AlertingDefinitionCreatedEvent;
+import rocks.inspectit.server.ci.event.AbstractAlertingDefinitionEvent.AlertingDefinitionDeletedEvent;
+import rocks.inspectit.server.ci.event.AbstractAlertingDefinitionEvent.AlertingDefinitionLoadedEvent;
+import rocks.inspectit.server.ci.event.AbstractAlertingDefinitionEvent.AlertingDefinitionUpdateEvent;
 import rocks.inspectit.shared.all.testbase.TestBase;
 import rocks.inspectit.shared.cs.ci.AlertingDefinition;
 import rocks.inspectit.shared.cs.communication.data.cmr.Alert;
@@ -38,28 +43,126 @@ import rocks.inspectit.shared.cs.communication.data.cmr.AlertClosingReason;
  * @author Marius Oehler
  *
  */
+@SuppressWarnings("PMD")
 public class AlertingSchedulerTest extends TestBase {
 
+	@InjectMocks
+	AlertingScheduler alertingScheduler;
+
+	@Mock
+	Logger logger;
+
+	@Mock
+	ThresholdChecker thresholdChecker;
+
+	@Mock
+	ScheduledExecutorService executorService;
+
 	/**
-	 * Test the {@link AlertingScheduler#init()} method.
-	 *
+	 * Test the {@link AlertingScheduler#updateState()} method.
 	 */
-	public static class Init extends AlertingSchedulerTest {
-
-		@InjectMocks
-		AlertingScheduler alertingScheduler;
-
-		@Mock
-		Logger logger;
+	public static class UpdateState extends AlertingSchedulerTest {
 
 		@Test
-		public void testInit() {
-			AlertingScheduler schedulerSpy = Mockito.spy(alertingScheduler);
-			doNothing().when(schedulerSpy).updateState();
+		public void deactivate() {
+			alertingScheduler.active = false;
 
-			schedulerSpy.init();
+			alertingScheduler.updateState();
 
-			verify(schedulerSpy, times(1)).updateState();
+			verifyZeroInteractions(thresholdChecker);
+			verifyZeroInteractions(executorService);
+		}
+
+		@Test
+		@SuppressWarnings({ "rawtypes", "unchecked" })
+		public void activate() {
+			ScheduledFuture future = Mockito.mock(ScheduledFuture.class);
+			when(executorService.scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES)).thenReturn(future);
+			alertingScheduler.active = true;
+
+			alertingScheduler.updateState();
+
+			verify(executorService).scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES);
+			verifyNoMoreInteractions(executorService);
+			verifyZeroInteractions(thresholdChecker);
+			verifyZeroInteractions(future);
+		}
+
+		@Test
+		@SuppressWarnings({ "rawtypes", "unchecked" })
+		public void activateWhenActive() {
+			ScheduledFuture future = Mockito.mock(ScheduledFuture.class);
+			when(future.isDone()).thenReturn(false);
+			when(executorService.scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES)).thenReturn(future);
+			alertingScheduler.active = true;
+			alertingScheduler.updateState();
+
+			alertingScheduler.updateState();
+
+			verify(executorService).scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES);
+			verifyNoMoreInteractions(executorService);
+			verify(future).isDone();
+			verifyNoMoreInteractions(future);
+			verifyZeroInteractions(thresholdChecker);
+		}
+
+		@Test
+		@SuppressWarnings({ "rawtypes", "unchecked" })
+		public void activateWhenInactive() {
+			ScheduledFuture future = Mockito.mock(ScheduledFuture.class);
+			when(future.isDone()).thenReturn(true);
+			when(executorService.scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES)).thenReturn(future);
+			alertingScheduler.active = true;
+			alertingScheduler.updateState();
+
+			alertingScheduler.updateState();
+
+			verify(executorService, times(2)).scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES);
+			verifyNoMoreInteractions(executorService);
+			verify(future).isDone();
+			verifyNoMoreInteractions(future);
+			verifyZeroInteractions(thresholdChecker);
+		}
+
+		@Test
+		@SuppressWarnings({ "rawtypes", "unchecked" })
+		public void deactivateWhenActive() {
+			ScheduledFuture future = Mockito.mock(ScheduledFuture.class);
+			when(future.isDone()).thenReturn(false);
+			when(executorService.scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES)).thenReturn(future);
+			alertingScheduler.active = true;
+			alertingScheduler.updateState();
+			alertingScheduler.active = false;
+
+			alertingScheduler.updateState();
+
+			verify(executorService).scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES);
+			verifyNoMoreInteractions(executorService);
+			verify(future).isDone();
+			verify(future).cancel(false);
+			verifyNoMoreInteractions(future);
+			verifyZeroInteractions(thresholdChecker);
+		}
+
+		@Test
+		@SuppressWarnings({ "rawtypes", "unchecked" })
+		public void deactivateWhenInactive() {
+			ScheduledFuture future = Mockito.mock(ScheduledFuture.class);
+			when(future.isDone()).thenReturn(false, true);
+			when(executorService.scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES)).thenReturn(future);
+			alertingScheduler.active = true;
+			alertingScheduler.updateState();
+			alertingScheduler.active = false;
+			alertingScheduler.updateState();
+
+			alertingScheduler.updateState();
+
+			verify(executorService).scheduleAtFixedRate(alertingScheduler, 0L, AlertingScheduler.CHECK_INTERVAL, TimeUnit.MINUTES);
+			verifyNoMoreInteractions(executorService);
+			verify(future, times(2)).isDone();
+			verify(future).cancel(false);
+			verifyNoMoreInteractions(future);
+			verifyZeroInteractions(thresholdChecker);
 		}
 	}
 
@@ -68,100 +171,62 @@ public class AlertingSchedulerTest extends TestBase {
 	 */
 	public static class Run extends AlertingSchedulerTest {
 
-		@InjectMocks
-		AlertingScheduler alertingScheduler;
-
 		@Mock
-		Logger logger;
-
-		@Mock
-		ThresholdChecker thresholdChecker;
-
-		@Mock
-		AlertingState stateOne;
-
-		@Mock
-		AlertingState stateTwo;
-
-		@Mock
-		AlertingDefinition definitionOne;
-
-		@Mock
-		AlertingDefinition definitionTwo;
+		List<AlertingState> alertingStates;
 
 		@Test
-		public void runThresholdCheck() throws Exception {
+		@SuppressWarnings("unchecked")
+		public void checkExistingAlertingStates() throws Exception {
+			AlertingState stateOne = mock(AlertingState.class);
+			AlertingState stateTwo = mock(AlertingState.class);
+			AlertingDefinition definitionOne = mock(AlertingDefinition.class);
+			AlertingDefinition definitionTwo = mock(AlertingDefinition.class);
+			Iterator<AlertingState> iterator = mock(Iterator.class);
+			when(iterator.hasNext()).thenReturn(true, true, false);
+			when(iterator.next()).thenReturn(stateOne, stateTwo);
+			when(alertingStates.iterator()).thenReturn(iterator);
 			when(definitionOne.getTimeRange(any(TimeUnit.class))).thenReturn(1L);
 			when(definitionTwo.getTimeRange(any(TimeUnit.class))).thenReturn(3600000L);
 			when(stateOne.getAlertingDefinition()).thenReturn(definitionOne);
 			when(stateTwo.getAlertingDefinition()).thenReturn(definitionTwo);
 			when(stateOne.getLastCheckTime()).thenReturn(System.currentTimeMillis() - 10L);
 			when(stateTwo.getLastCheckTime()).thenReturn(System.currentTimeMillis() - 10L);
-			alertingScheduler.alertingStates = Arrays.asList(stateOne, stateTwo);
 
 			alertingScheduler.run();
 
 			verify(thresholdChecker, times(1)).checkThreshold(stateOne);
 			verify(thresholdChecker, times(0)).checkThreshold(stateTwo);
-		}
-	}
-
-	/**
-	 * Test the {@link AlertingScheduler#updateState()} method.
-	 */
-	public static class UpdateState extends AlertingSchedulerTest {
-
-		@InjectMocks
-		AlertingScheduler alertingScheduler;
-
-		@Mock
-		Logger logger;
-
-		@Mock
-		ScheduledExecutorService executorService;
-
-		@SuppressWarnings("rawtypes")
-		ScheduledFuture futureMock = mock(ScheduledFuture.class);
-
-		@Test
-		@SuppressWarnings({ "unchecked" })
-		public void setActiveOnce() throws Exception {
-			alertingScheduler.active = true;
-			when(futureMock.isDone()).thenReturn(false);
-			when(executorService.scheduleAtFixedRate(any(Runnable.class), any(Long.class), any(Long.class), any(TimeUnit.class))).thenReturn(futureMock);
-
-			alertingScheduler.updateState();
-			alertingScheduler.updateState();
-
-			verify(executorService, times(1)).scheduleAtFixedRate(any(Runnable.class), any(Long.class), any(Long.class), any(TimeUnit.class));
+			verifyNoMoreInteractions(thresholdChecker);
+			verifyZeroInteractions(executorService);
 		}
 
 		@Test
-		public void activateWhenDone() {
-			alertingScheduler.active = true;
-			alertingScheduler.scheduledFuture = futureMock;
-			when(futureMock.isDone()).thenReturn(true);
+		@SuppressWarnings("unchecked")
+		public void noAlertingStates() throws Exception {
+			Iterator<AlertingState> iterator = mock(Iterator.class);
+			when(iterator.hasNext()).thenReturn(false);
+			when(alertingStates.iterator()).thenReturn(iterator);
 
-			alertingScheduler.updateState();
+			alertingScheduler.run();
 
-			verify(executorService, times(1)).scheduleAtFixedRate(any(Runnable.class), any(Long.class), any(Long.class), any(TimeUnit.class));
+			verifyZeroInteractions(thresholdChecker);
+			verifyZeroInteractions(executorService);
 		}
 
 		@Test
-		public void disableScheduler() throws Exception {
-			alertingScheduler.active = false;
-			alertingScheduler.scheduledFuture = futureMock;
+		@SuppressWarnings("unchecked")
+		public void noAlertingDefinition() throws Exception {
+			AlertingState stateOne = mock(AlertingState.class);
+			Iterator<AlertingState> iterator = mock(Iterator.class);
+			when(iterator.hasNext()).thenReturn(true, false);
+			when(iterator.next()).thenReturn(stateOne);
+			when(alertingStates.iterator()).thenReturn(iterator);
+			when(stateOne.getLastCheckTime()).thenReturn(System.currentTimeMillis() - 10L);
 
-			alertingScheduler.updateState();
+			alertingScheduler.run();
 
-			verify(futureMock, times(1)).cancel(false);
-		}
-
-		@Test
-		public void disableWhenNull() throws Exception {
-			alertingScheduler.active = false;
-
-			alertingScheduler.updateState();
+			verifyZeroInteractions(thresholdChecker);
+			verifyZeroInteractions(executorService);
 		}
 	}
 
@@ -173,190 +238,158 @@ public class AlertingSchedulerTest extends TestBase {
 	 */
 	public static class OnApplicationEvent extends AlertingSchedulerTest {
 
-		@InjectMocks
-		AlertingScheduler alertingScheduler;
-
-		@Mock
-		Logger logger;
-
-		@Mock
-		AbstractAlertingDefinitionEvent event;
-
-		@Mock
-		List<AlertingState> alertingStates;
-
 		@Mock
 		AlertingDefinition definitionOne;
 
 		@Mock
 		AlertingDefinition definitionTwo;
 
+		@SuppressWarnings("unchecked")
+		private List<AlertingState> getAlertingStates() {
+			try {
+				Field field = AlertingScheduler.class.getDeclaredField("alertingStates");
+				field.setAccessible(true);
+				return (List<AlertingState>) field.get(alertingScheduler);
+			} catch (Exception e) {
+				throw new RuntimeException(e);
+			}
+		}
+
 		@Test
 		public void nullEvent() {
 			alertingScheduler.onApplicationEvent(null);
+
+			verifyZeroInteractions(thresholdChecker, executorService);
 		}
 
 		@Test
 		public void loadingEvent() {
-			ArgumentCaptor<AlertingState> stateCapture = ArgumentCaptor.forClass(AlertingState.class);
-			when(event.getType()).thenReturn(AlertDefinitionEventType.LOADED);
-			when(event.getAlertingDefinitions()).thenReturn(Arrays.asList(definitionOne, definitionTwo));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionLoadedEvent(this, Arrays.asList(definitionOne, definitionTwo));
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(alertingStates, times(1)).clear();
-			verify(alertingStates, times(2)).add(stateCapture.capture());
-			assertThat(stateCapture.getAllValues().get(0).getAlertingDefinition(), equalTo(definitionOne));
-			assertThat(stateCapture.getAllValues().get(1).getAlertingDefinition(), equalTo(definitionTwo));
+			verifyZeroInteractions(thresholdChecker, executorService, definitionOne, definitionTwo);
+			assertThat(getAlertingStates(), hasSize(2));
+			assertThat(getAlertingStates().get(0).getAlertingDefinition(), equalTo(definitionOne));
+			assertThat(getAlertingStates().get(1).getAlertingDefinition(), equalTo(definitionTwo));
 		}
 
 		@Test
 		public void createEvent() {
-			ArgumentCaptor<AlertingState> stateCapture = ArgumentCaptor.forClass(AlertingState.class);
-			when(event.getType()).thenReturn(AlertDefinitionEventType.ADDED);
-			when(event.getFirst()).thenReturn(definitionOne);
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionCreatedEvent(this, definitionOne);
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(alertingStates, times(1)).add(stateCapture.capture());
-			assertThat(stateCapture.getValue().getAlertingDefinition(), equalTo(definitionOne));
+			verifyZeroInteractions(thresholdChecker, executorService, definitionOne);
+			assertThat(getAlertingStates(), hasSize(1));
+			assertThat(getAlertingStates().get(0).getAlertingDefinition(), equalTo(definitionOne));
 		}
 
 		@Test
-		@SuppressWarnings("unchecked")
 		public void deletedEvent() {
+			alertingScheduler.onApplicationEvent(new AlertingDefinitionCreatedEvent(this, definitionOne));
+			assertThat(getAlertingStates(), hasSize(1));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionDeletedEvent(this, definitionOne);
 			when(definitionOne.getId()).thenReturn("id");
-			AlertingState stateMock = mock(AlertingState.class);
-			when(stateMock.getAlertingDefinition()).thenReturn(definitionOne);
-			Iterator<AlertingState> iteratorMock = mock(Iterator.class);
-			when(alertingStates.iterator()).thenReturn(iteratorMock);
-			when(iteratorMock.hasNext()).thenReturn(true, false);
-			when(iteratorMock.next()).thenReturn(stateMock);
-			when(event.getType()).thenReturn(AlertDefinitionEventType.REMOVED);
-			when(event.getFirst()).thenReturn(definitionOne);
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(alertingStates, times(1)).remove(stateMock);
+			verify(definitionOne, times(2)).getId();
+			verifyNoMoreInteractions(definitionOne);
+			verifyZeroInteractions(thresholdChecker, executorService);
+			assertThat(getAlertingStates(), hasSize(0));
 		}
 
 		@Test
-		@SuppressWarnings("unchecked")
 		public void deletedEventAlertActive() {
+			alertingScheduler.onApplicationEvent(new AlertingDefinitionCreatedEvent(this, definitionOne));
+			assertThat(getAlertingStates(), hasSize(1));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionDeletedEvent(this, definitionOne);
 			when(definitionOne.getId()).thenReturn("id");
-
 			Alert alertMock = mock(Alert.class);
-
-			AlertingState stateMock = mock(AlertingState.class);
-			when(stateMock.getAlert()).thenReturn(alertMock);
-			when(stateMock.getAlertingDefinition()).thenReturn(definitionOne);
-
-			Iterator<AlertingState> iteratorMock = mock(Iterator.class);
-			when(alertingStates.iterator()).thenReturn(iteratorMock);
-			when(iteratorMock.hasNext()).thenReturn(true, false);
-			when(iteratorMock.next()).thenReturn(stateMock);
-
-			when(event.getType()).thenReturn(AlertDefinitionEventType.REMOVED);
-			when(event.getFirst()).thenReturn(definitionOne);
-			ArgumentCaptor<AlertClosingReason> reasonCapture = ArgumentCaptor.forClass(AlertClosingReason.class);
+			// set manually because it would done by the threshold checker which is also mocked
+			getAlertingStates().get(0).setAlert(alertMock);
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(alertingStates, times(1)).remove(stateMock);
+			ArgumentCaptor<AlertClosingReason> reasonCapture = ArgumentCaptor.forClass(AlertClosingReason.class);
 			verify(alertMock, times(1)).close(any(Long.class), reasonCapture.capture());
+			verify(definitionOne, times(2)).getId();
+			verifyNoMoreInteractions(definitionOne);
+			verifyZeroInteractions(thresholdChecker, executorService);
+			assertThat(getAlertingStates(), hasSize(0));
 			assertThat(reasonCapture.getValue(), equalTo(AlertClosingReason.ALERTING_DEFINITION_DELETED));
 		}
 
 		@Test
-		@SuppressWarnings("unchecked")
 		public void deletedUnknownEvent() {
+			alertingScheduler.onApplicationEvent(new AlertingDefinitionCreatedEvent(this, definitionOne));
+			assertThat(getAlertingStates(), hasSize(1));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionDeletedEvent(this, definitionTwo);
 			when(definitionOne.getId()).thenReturn("id");
-
-			AlertingState stateMock = mock(AlertingState.class);
-			when(stateMock.getAlertingDefinition()).thenReturn(definitionOne);
-
-			Iterator<AlertingState> iteratorMock = mock(Iterator.class);
-			when(alertingStates.iterator()).thenReturn(iteratorMock);
-			when(iteratorMock.hasNext()).thenReturn(true, false);
-			when(iteratorMock.next()).thenReturn(stateMock);
-
-			when(event.getType()).thenReturn(AlertDefinitionEventType.REMOVED);
-			when(event.getFirst()).thenReturn(definitionTwo);
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(iteratorMock, times(0)).remove();
+			verify(definitionOne).getId();
+			verify(definitionTwo).getId();
+			verifyNoMoreInteractions(definitionOne, definitionTwo);
+			verifyZeroInteractions(thresholdChecker, executorService);
+			assertThat(getAlertingStates(), hasSize(1));
 		}
 
 		@Test
-		@SuppressWarnings("unchecked")
 		public void updateEvent() {
+			alertingScheduler.onApplicationEvent(new AlertingDefinitionCreatedEvent(this, definitionOne));
+			assertThat(getAlertingStates().get(0).getAlertingDefinition(), equalTo(definitionOne));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionUpdateEvent(this, definitionTwo);
 			when(definitionOne.getId()).thenReturn("id");
-
-			AlertingState stateMock = mock(AlertingState.class);
-			when(stateMock.getAlertingDefinition()).thenReturn(definitionOne);
-
-			Iterator<AlertingState> iteratorMock = mock(Iterator.class);
-			when(alertingStates.iterator()).thenReturn(iteratorMock);
-			when(iteratorMock.hasNext()).thenReturn(true, false);
-			when(iteratorMock.next()).thenReturn(stateMock);
-
-			when(event.getType()).thenReturn(AlertDefinitionEventType.UPDATE);
-			when(event.getFirst()).thenReturn(definitionOne);
+			when(definitionTwo.getId()).thenReturn("id");
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(stateMock, times(1)).setAlertingDefinition(definitionOne);
+			verify(definitionOne).getId();
+			verify(definitionTwo).getId();
+			verifyNoMoreInteractions(definitionOne, definitionTwo);
+			verifyZeroInteractions(thresholdChecker, executorService);
+			assertThat(getAlertingStates(), hasSize(1));
+			assertThat(getAlertingStates().get(0).getAlertingDefinition(), equalTo(definitionTwo));
 		}
 
 		@Test
-		@SuppressWarnings("unchecked")
 		public void updateEventAlertActive() {
+			alertingScheduler.onApplicationEvent(new AlertingDefinitionCreatedEvent(this, definitionOne));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionUpdateEvent(this, definitionOne);
 			when(definitionOne.getId()).thenReturn("id");
-
 			Alert alertMock = mock(Alert.class);
-
-			AlertingState stateMock = mock(AlertingState.class);
-			when(stateMock.getAlert()).thenReturn(alertMock);
-			when(stateMock.getAlertingDefinition()).thenReturn(definitionOne);
-
-			Iterator<AlertingState> iteratorMock = mock(Iterator.class);
-			when(alertingStates.iterator()).thenReturn(iteratorMock);
-			when(iteratorMock.hasNext()).thenReturn(true, false);
-			when(iteratorMock.next()).thenReturn(stateMock);
-
-			when(event.getType()).thenReturn(AlertDefinitionEventType.UPDATE);
-			when(event.getFirst()).thenReturn(definitionOne);
+			// set manually because it would done by the threshold checker which is also mocked
+			getAlertingStates().get(0).setAlert(alertMock);
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(stateMock, times(1)).setAlertingDefinition(definitionOne);
+
 			verify(alertMock, times(1)).setAlertingDefinition(definitionOne);
+			verify(definitionOne, times(2)).getId();
+			verifyNoMoreInteractions(definitionOne);
+			verifyZeroInteractions(thresholdChecker, executorService);
+			assertThat(getAlertingStates(), hasSize(1));
 		}
 
 		@Test
-		@SuppressWarnings("unchecked")
 		public void updateUnknownEvent() {
+			alertingScheduler.onApplicationEvent(new AlertingDefinitionCreatedEvent(this, definitionOne));
+			AbstractAlertingDefinitionEvent event = new AlertingDefinitionUpdateEvent(this, definitionTwo);
 			when(definitionOne.getId()).thenReturn("id");
-
-			Alert alertMock = mock(Alert.class);
-
-			AlertingState stateMock = mock(AlertingState.class);
-			when(stateMock.getAlert()).thenReturn(alertMock);
-			when(stateMock.getAlertingDefinition()).thenReturn(definitionOne);
-
-			Iterator<AlertingState> iteratorMock = mock(Iterator.class);
-			when(alertingStates.iterator()).thenReturn(iteratorMock);
-			when(iteratorMock.hasNext()).thenReturn(true, false);
-			when(iteratorMock.next()).thenReturn(stateMock);
-
-			when(event.getType()).thenReturn(AlertDefinitionEventType.UPDATE);
-			when(event.getFirst()).thenReturn(definitionTwo);
+			when(definitionTwo.getId()).thenReturn("id_2");
 
 			alertingScheduler.onApplicationEvent(event);
 
-			verify(stateMock, never()).setAlertingDefinition(any(AlertingDefinition.class));
-			verify(alertMock, never()).setAlertingDefinition(any(AlertingDefinition.class));
+			assertThat(getAlertingStates(), hasSize(1));
+			assertThat(getAlertingStates().get(0).getAlertingDefinition(), equalTo(definitionOne));
+			verify(definitionOne).getId();
+			verify(definitionTwo).getId();
+			verifyNoMoreInteractions(definitionOne, definitionTwo);
+			verifyZeroInteractions(thresholdChecker, executorService);
+			assertThat(getAlertingStates(), hasSize(1));
 		}
 	}
 }
